--- a/_publications/2024a_cpc.md
+++ b/_publications/2024a_cpc.md
@@ -6,6 +6,6 @@ excerpt: ''
 date: 2023-04-18
 venue: 'Combinatorics, Probability and Computing'
 paperurl: 'https://doi.org/10.48550/arXiv.2304.09155'
-citation: 'K. Katsamaktsis, S. Letzter and A. Sgueglia. Rainbow Hamiltonicity in uniformly coloured perturbed digraphs. Combinatorics, Probability and Computing 33 (2024), 624–642.'
+#citation: 'K. Katsamaktsis, S. Letzter and A. Sgueglia. Rainbow Hamiltonicity in uniformly coloured perturbed digraphs. Combinatorics, Probability and Computing 33 (2024), 624–642.'
 ---
 
