--- a/_publications/2024a_ejc.md
+++ b/_publications/2024a_ejc.md
@@ -6,6 +6,6 @@ excerpt: ''
 date: 2024-01-29
 venue: 'European Journal of Combinatorics (to appear)'
 paperurl: 'https://doi.org/10.48550/arXiv.2401.15812'
-citation: 'K. Katsamaktsis and S. Letzter. Building graphs with high minimum degree on a budget. arXiv:2401.15812 (2024). To appear in European Journal of Combinatorics.'
+#citation: 'K. Katsamaktsis and S. Letzter. Building graphs with high minimum degree on a budget. arXiv:2401.15812 (2024). To appear in European Journal of Combinatorics.'
 ---
 
