--- a/_publications/2023b_jct.md
+++ b/_publications/2023b_jct.md
@@ -6,6 +6,7 @@ excerpt: ''
 date: 2023-08-22
 venue: 'Journal of Combinatorial Theory, Series B (to appear)'
 paperurl: 'https://doi.org/10.48550/arXiv.2308.11613'
+other_authors: 'S. Letzter, A. Pokrovskiy, and B. Sudakov'
 citation: 'K. Katsamaktsis, S. Letzter, A. Pokrovskiy, and B. Sudakov. Ascending subgraph decomposition. arXiv:2308.11613 (2023). To appear in Journal of Combinatorial Theory, Series B.'
 ---
 
