--- a/_publications/2024a_ejc.md
+++ b/_publications/2024a_ejc.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2024a_ejc
 excerpt: ''
 date: 2024-01-29
-venue: 'European Journal of Combinatorics (to appear)'
+venue: 'European Journal of Combinatorics'
 paperurl: 'https://doi.org/10.48550/arXiv.2401.15812'
 other_authors: 'S. Letzter'
 citation: 'K. Katsamaktsis and S. Letzter. Building graphs with high minimum degree on a budget. arXiv:2401.15812 (2024). To appear in European Journal of Combinatorics.'
